# PLCSim

./: .gitignore  CMakeLists.txt  README.md  clock.h  config.h  config.proto  config_interface.h  datatype.h  datatype_registry.h  elementary_datatypes.h  executor.h  functions_registry.h  instruction_registry.h  kronos_api.h  library.h  logger.h  mem_unit.h  pc_logger.h  pou_container.h  resource.h  resource_interface.h  resource_manager.h  resource_registry.h  sfb_registry.h  sfc_registry.h  synchronized_queue.h  system_specification.proto  task.h  utils.h  variable.h
grpc/: api.h
instruction/: add.h  and.h  div.h  eq.h  ge.h  gt.h  instruction.h  ld.h  le.h  lt.h  mod.h  mul.h  ne.h  not.h  or.h  shl.h  shr.h  st.h  sub.h  xor.h
modules/: actuator.h  communication.h  module.h  sensor.h
proto/: mem_access.proto
sfb/: sfb.h  tof.h  ton.h  tp.h
sfc/: abs.h  acos.h  any_to_any.h  asin.h  atan.h  cos.h  exp.h  gtod.h  limit.h  ln.h  log.h  max.h  min.h  mux.h  sel.h  sfc.h  sin.h  sqrt.h  tan.h
